# monorepo-example

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  buf.gen.yaml  deps.bzl  go.mod  go.sum
projects/api/: BUILD.bazel  main.go
projects/api/cmd/: BUILD.bazel  main.go
projects/greet/: BUILD.bazel  main.go
proto/: buf.yaml
