load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/helbing/monorepo-example/projects/api/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//packages/tool",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
